# ChangeLog for net-im/bitlbee
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/bitlbee/ChangeLog,v 1.92 2008/03/19 14:15:17 cedk Exp $

*bitlbee-1.2 (19 Mar 2008)

  19 Mar 2008; Cédric Krier <cedk@gentoo.org> +bitlbee-1.2.ebuild:
  Version bump

*bitlbee-1.1.1 (30 Dec 2007)

  30 Dec 2007; Cédric Krier <cedk@gentoo.org> +bitlbee-1.1.1.ebuild:
  Version bump

  13 Dec 2007; Cédric Krier <cedk@gentoo.org> bitlbee-1.1-r1.ebuild:
  Fix to enable bogus ssl

  13 Dec 2007; Cédric Krier <cedk@gentoo.org>
  -files/bitlbee-1.0-xinetd.patch, -bitlbee-1.0.1.ebuild,
  -bitlbee-1.0.2.ebuild, -bitlbee-1.1.ebuild:
  Remove old

*bitlbee-1.1-r1 (13 Dec 2007)

  13 Dec 2007; Cédric Krier <cedk@gentoo.org> +files/oscar-sms.patch,
  +bitlbee-1.1-r1.ebuild:
  Fix for bugs #134202 and #156159

  28 Oct 2007; Christian Heim <phreak@gentoo.org> bitlbee-1.0.1.ebuild,
  bitlbee-1.0.2.ebuild, bitlbee-1.0.3.ebuild, bitlbee-1.0.4.ebuild,
  bitlbee-1.1.ebuild:
  Include virtual/logger in RDEPEND, as the initscript already specifies 'need
  logger'.

  18 Sep 2007; Cédric Krier <cedk@gentoo.org>
  -files/bitlbee-0.80-xinetd.patch, -files/bitlbee-0.82-segv.diff,
  -files/bitlbee-0.84-passport.diff, -bitlbee-0.92.ebuild,
  -bitlbee-0.92-r1.ebuild, -bitlbee-0.92-r2.ebuild, -bitlbee-0.92-r3.ebuild,
  -bitlbee-0.99.ebuild, -bitlbee-1.0.ebuild:
  Remove old

*bitlbee-1.1 (18 Sep 2007)

  18 Sep 2007; Cédric Krier <cedk@gentoo.org> +bitlbee-1.1.ebuild:
  Version bump

  18 Sep 2007; Cédric Krier <cedk@gentoo.org> bitlbee-1.0.4.ebuild:
  Fix ssl option for bug #134202

  16 Sep 2007; Cédric Krier <cedk@gentoo.org> bitlbee-0.92-r1.ebuild,
  bitlbee-0.92-r2.ebuild, bitlbee-0.92-r3.ebuild, bitlbee-0.99.ebuild:
  Fix syntax for bug #192664

*bitlbee-1.0.4 (05 Sep 2007)

  05 Sep 2007; Cédric Krier <cedk@gentoo.org> +files/bitlbeed.confd2,
  +files/bitlbeed.initd, +bitlbee-1.0.4.ebuild:
  Version bump and use bitlbee user instead of nobody
