@@ -15,6 +15,6 @@ EBUILD bitlbee-1.0.3.ebuild 4596 RMD160 dc3dcb30a2b75c612648b37b25a38f114f53e40d
 EBUILD bitlbee-1.0.4.ebuild 4774 RMD160 addfb0cbc7bb3c52240dafa122fca6a9990566a2 SHA1 9abd1cf99418a4902e14c93d43389e664fdb3725 SHA256 1caaeb4192d15dc8ca94985a940e8f95256ce83b0a2db85403b0cacb0051f0b9
 EBUILD bitlbee-1.1-r1.ebuild 4522 RMD160 9db9def9d8f65bef689af8a4af1f52c28a89a2d3 SHA1 ade9acec15d73b88b44cc6db037c706eb3868620 SHA256 5038b3668f502dc4049677eb5b1424e4fc6b932c81d4a3ec1af82b6e11db2561
 EBUILD bitlbee-1.1.1.ebuild 4485 RMD160 7fadfde761bc4e8caf669c76b4d5e0f7277d9014 SHA1 1bfa40755c72c014bc3fc05b44dd28be086dbe42 SHA256 69cb6853f13059de983725bcb679db40f56312585879ed63bc90a046928d1074
-EBUILD bitlbee-1.2.ebuild 4451 RMD160 e7dbc490a620434e28034b55e1653948570fe3e7 SHA1 57edf4f503579fb8a3652d26a3e9528133bb480e SHA256 453380fff638528a9d24a27df5af92a883f88b46b5241f9ed1dfd089c4d16f00
-MISC ChangeLog 15066 RMD160 7295c2d9a4c2fe0cb519677d21d964b54c180f0b SHA1 f7051c60773e1fd5b38f5eff0e4392669f4d21f3 SHA256 8832a8c624290a8b21f7a235a73a3723150f88e617a90be365eb24c65b0f733f
+EBUILD bitlbee-1.2.ebuild 4482 RMD160 4989b4bf50cf29be15661098be31a7886db6ddcf SHA1 8c86c55231c14062334409807e47e80890f4b7b0 SHA256 2ddf4057dc871c9e2ac1147bf307c2406b2e8202963fded4d4fccd4a923eb337
+MISC ChangeLog 15168 RMD160 906dffe58b30d477ea4e3aac3f5be6cbb6057f01 SHA1 727f340be71065c0b3811d8e38dd8cd3e762907b SHA256 52dd61613b69b8b40167830055b12a08f2f8db5622b6b0ebaad3e3a5988492d8
 MISC metadata.xml 441 RMD160 f440e9e63bc4c6abdcf4b7e23fcfddcd678f961e SHA1 6cca8fafd875ff937fc225a1b0fd1876802ffb42 SHA256 a6dcfed15814498c58a9625f9bb9f742595a253181656d8b7fc69234d3170840
