@@ -1,6 +1,9 @@
 # ChangeLog for net-im/bitlbee
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/bitlbee/ChangeLog,v 1.92 2008/03/19 14:15:17 cedk Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/bitlbee/ChangeLog,v 1.93 2008/03/25 22:04:34 cedk Exp $
+
+  25 Mar 2008; Cédric Krier <cedk@gentoo.org> bitlbee-1.2.ebuild:
+  Add missing dep for bug #213958
 
 *bitlbee-1.2 (19 Mar 2008)
 
